[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/roboto_mono_36.tres" type="DynamicFont" id=2]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="CurrentWeapon" type="Sprite" parent="."]
position = Vector2( 200, 300 )

[node name="CurrentAmmo" type="Label" parent="."]
margin_left = 875.0
margin_top = 460.0
margin_right = 904.0
margin_bottom = 513.0
custom_fonts/font = ExtResource( 2 )
text = "3"

[node name="TimeText" type="Label" parent="."]
margin_left = 41.0
margin_top = 22.0
margin_right = 233.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "12:12:12"

[node name="MaxAmmo" type="Label" parent="."]
margin_left = 902.0
margin_top = 501.0
margin_right = 950.0
margin_bottom = 554.0
custom_fonts/font = ExtResource( 2 )
text = "51"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
